<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/s"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/set_password"
        android:gravity="center"
        android:textSize="24sp"
        android:background="@drawable/blue_bkg"
        />
    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:password="true"
        android:layout_height="wrap_content"
        android:hint="@string/input_pw"
        tools:ignore="Deprecated" />
    <EditText
        android:id="@+id/pass1"
        android:password="true"
        android:layout_marginTop="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_pw_aga"
        tools:ignore="Deprecated" />

    <RelativeLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/set_p_cancel"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_ok_select"
            android:text="@string/cancel"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            />
        <Button
            android:id="@+id/set_p_ok"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_ok_select"
            android:text="@string/ok"
            android:layout_marginLeft="30dp"
            />
    </RelativeLayout>

</LinearLayout>