<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gaojionju"
        android:gravity="center"
        android:background="@color/lvSe"
        android:textSize="26sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />
    <Button
        android:id="@+id/but"
        android:layout_marginTop="12sp"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="@string/haomaguishudichaxun"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        />
    <Button
        android:id="@+id/but1"
        android:layout_marginTop="12sp"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="@string/cyhmcx1"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        />
    <Button
        android:id="@+id/smsBackup"
        android:layout_marginTop="12sp"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="@string/smsbackup"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        />


</LinearLayout>