<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:background="@color/lvSe3"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heimingdan"
            android:textSize="30sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
        <Button
            android:id="@+id/n1"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_alignParentRight="true"
            android:background="@drawable/dg_btn_confirm_normal"
            android:layout_marginRight="4sp"
            android:layout_centerVertical="true"
            android:text="@string/tj"
            android:textSize="20sp"
            />

    </RelativeLayout>

    <ListView
        android:id="@+id/kk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6sp"
        android:visibility="visible"
        >

    </ListView>

    <LinearLayout
        android:id="@+id/isload"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jiazai"
            />

    </LinearLayout>

</LinearLayout>